# FlowMaster

./: .gitignore  .npmrc  README.md  db.sqlite  electron-builder.json5  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
electron/: electron-env.d.ts  main.ts  preload.ts
electron/dbServices/: dbServicesInit.ts
electron/dbServices/db/: dbInit.ts
electron/dbServices/db/controller/: Todo.ts  user.ts
electron/dbServices/db/dao/: Todo.ts  user.ts
electron/dbServices/db/entity/: Todo.ts  user.ts
electron/dbServices/db/services/: Todo.ts  user.ts
electron/ipc/: createWin.ts  index.ts  openExternal.ts  todoCurd.ts
electron/utils/: constants.ts  index.ts
public/icons/: icon.icns
src/: index.css  main.tsx  styles.css
src-tauri/: Cargo.toml  db.sqlite  tauri.conf.json
src-tauri/capabilities/: migrated copy.xxx  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  todo.rs  utils.rs
src/components/Checkbox/: index.module.less  index.tsx
src/components/Collapse/: index.tsx
src/components/Icon/: index.tsx
src/components/Layout/: AboutMe.tsx  LeftMenu.tsx  Title.tsx  index.module.less  index.tsx
src/components/Modal/: index.tsx
src/constants/: config.ts
src/hooks/: useAutoTodo.ts  useContextMenu.ts  useMoveHighlight.tsx  useUpdateTodoOnClose.ts  useWebviewWindow.tsx
src/pages/AddItem/: index.tsx
src/pages/AddTodo/: index.module.less  index.tsx
src/pages/Home/: index.less  index.module.less  index.tsx
src/pages/Home/components/: Item.tsx  QuadrantsEmpty.tsx  QuadrantsItem.tsx
src/pages/Quadrants/: index.module.less  index.tsx
src/pages/Quadrants/components/: QuadrantsEmpty.tsx  QuadrantsItem.tsx
src/pages/Quest/: index.module.less  index.tsx
src/pages/TodoItemMenu/: index.tsx
src/router/: index.tsx
src/store/: todo.ts
src/types/: todo.ts
