[package]
name = "mo_dao"
version = "0.0.0"
description = "打工人高效率工具"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.0.5", features = [ "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"
window-shadows = "0.2.2"
rusqlite = { version = "0.31.0", features = ["bundled"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
