[package]
name = "mo_dao"
version = "0.0.0"
description = "打工人高效率工具"
authors = ["nianyi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tauri-plugin-os = "2.0.0-beta.4"
tauri-plugin-notification = "2.0.0-beta.5"
tauri-plugin-dialog = "2.0.0-beta.7"
tauri-plugin-shell = "2.0.0-beta.5"
tauri-plugin-process = "2.0.0-beta.4"
tauri-plugin-clipboard-manager = "2.1.0-beta.2"
tauri-plugin-http = "2.0.0-beta.7"
tauri-plugin-fs = "2.0.0-beta.7"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta.4"
